# rochess

./: .gitignore  LICENSE  README.md  pyproject.toml
rochess/: board.py  chess_board.py  chess_moves.py  chess_pieces.py  fen_parser.py  main.py  move.py  piece.py
tests/: test_board.py  test_chess_board.py
